code updated on line no.77

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 class="d-block carousel-img"
                 alt="image-1"
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption  d-md-block">
                 <h5>First Slide Title</h5>
                 <p>First slide description</p>
                 <button type="button" class="btn btn-primary">
@@ -89,7 +89,7 @@
                 class="d-block carousel-img"
                 alt="image-2"
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <h5>Second Slide Title</h5>
                 <p>Second slide description</p>
                 <button type="button" class="btn btn-primary">
@@ -104,7 +104,7 @@
                 class="d-block carousel-img"
                 alt="image-3"
               />
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-md-block">
                 <h5>Third Slide Title</h5>
                 <p>Third slide description</p>
                 <button type="button" class="btn btn-primary">
