code updated on 251

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             headquarters of the Indian National Congress.
           </p>
           <a
-            href="https://en.wikipedia.org/wiki/Anand_Bhavan"
+            href="https://en.wikipedia.org/wiki/Lord_Curzon_Bridge"
             target="_blank"
             class="btn btn-primary"
             >Know More ...</a
