--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <!-- PHOTO GALLERY SECTION -->
     <section id="section-2" class="photo-gallery-section">
       <div id="section-1" class="photo-gallery photo-gallery-grid">
-        <img src="./flex-grid-images/Anand-Bhawan.jpg" alt="Anand-Bhawan" />
+        <img id="p-gllery-img1" src="./flex-grid-images/Anand-Bhawan.jpg" alt="Anand-Bhawan" />
         <img src="./flex-grid-images/CS-AZAD_PARK.jpg" alt="CS-AZAD_PARK" />
         <img src="./flex-grid-images/Fort.jpg" alt="Fort-Allahabd" />
         <img src="./flex-grid-images/hanuman-mandir.jpg" alt="hanuman-mandir" />
