--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
     <!-- PHOTO GALLERY SECTION -->
     <section id="section-2" class="photo-gallery-section">
       <div id="section-1" class="photo-gallery photo-gallery-grid">
-        <img id="p-gllery-img1" src="./flex-grid-images/Anand-Bhawan.jpg" alt="Anand-Bhawan" />
+        <img id="p-gallery-img1" src="./flex-grid-images/Anand-Bhawan.jpg" alt="Anand-Bhawan" />
         <img src="./flex-grid-images/CS-AZAD_PARK.jpg" alt="CS-AZAD_PARK" />
-        <img src="./flex-grid-images/Fort.jpg" alt="Fort-Allahabd" />
-        <img src="./flex-grid-images/hanuman-mandir.jpg" alt="hanuman-mandir" />
+        <img id="p-gallery-img3" src="./flex-grid-images/Fort.jpg" alt="Fort-Allahabd" />
+        <img id="p-gallery-img4" src="./flex-grid-images/hanuman-mandir.jpg" alt="hanuman-mandir" />
         <img src="./flex-grid-images/img001.jpg" alt="Image001" />
         <img src="./flex-grid-images/Khusro-Bagh.jpg" alt="Khusro-Bagh" />
         <img src="./flex-grid-images/museum.jpg" alt="Museum-Allahabad" />
